--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "24.0.14",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "classnames": "^2.5.1",
     "eslint": "9.31.0",
     "eslint-config-next": "15.4.1",
     "next": "15.4.1",
