--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "classnames": "^2.5.1",
+    "easymde": "^2.20.0",
     "eslint": "9.31.0",
     "eslint-config-next": "15.4.1",
     "next": "15.4.1",
@@ -22,6 +23,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-simplemde-editor": "^5.2.0",
     "typescript": "5.8.3",
     "zod": "^3.22.2"
   },
