--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "24.0.14",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "axios": "^1.5.0",
     "classnames": "^2.5.1",
     "easymde": "^2.20.0",
     "eslint": "9.31.0",
@@ -22,6 +23,7 @@
     "prisma": "^5.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-simplemde-editor": "^5.2.0",
     "typescript": "5.8.3",
