--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^5.3.1",
     "@radix-ui/themes": "^3.2.1",
     "@types/node": "24.0.14",
@@ -27,7 +28,7 @@
     "react-icons": "^5.5.0",
     "react-simplemde-editor": "^5.2.0",
     "typescript": "5.8.3",
-    "zod": "^3.22.2"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
