--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-markdown": "^8.0.7",
     "react-simplemde-editor": "^5.2.0",
     "typescript": "5.8.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11"
