--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
     "@types/node": "24.0.14",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
     "axios": "^1.5.0",
     "classnames": "^2.5.1",
     "delay": "^6.0.0",
@@ -24,8 +24,8 @@
     "eslint-config-next": "15.4.1",
     "next": "15.4.1",
     "prisma": "^5.3.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.3.1",
