--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "jsxImportSource": "react",
+    "types": ["react", "react-dom"],
     "incremental": true,
     "plugins": [
       {
