--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "easymde": "^2.20.0",
     "eslint": "9.31.0",
     "eslint-config-next": "15.4.1",
-    "next": "15.4.1",
+    "next": "^15.4.1",
     "prisma": "^5.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-is": "^19.1.1",
     "react-loading-skeleton": "^3.3.1",
     "react-markdown": "^8.0.7",
     "react-simplemde-editor": "^5.2.0",
