--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "9.31.0",
     "eslint-config-next": "15.4.1",
     "next": "^15.4.1",
+    "next-auth": "^5.0.0-beta.29",
     "prisma": "^5.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
