--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-icons": "^1.3.2",
@@ -23,7 +24,7 @@
     "eslint": "9.31.0",
     "eslint-config-next": "15.4.1",
     "next": "^15.4.1",
-    "next-auth": "^5.0.0-beta.29",
+    "next-auth": "^4.24.11",
     "prisma": "^5.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
