--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
+    "@tanstack/react-query": "^5.90.5",
     "@types/node": "24.0.14",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
