--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
     "react-is": "^19.1.1",
     "react-loading-skeleton": "^3.3.1",
